# HFT-Informatikprojekt

./: Projektplan.docx  plan.txt  ~$ojektplan.docx
Programm/: CMakeLists.txt  main.cpp
Programm/binapi/include/binapi/: reports.hpp
Programm/binapi/src/: tools.cpp
